--- a/configs/config_vars.yaml
+++ b/configs/config_vars.yaml
@@ -5,3 +5,5 @@ logger-level: debug
 is_testing: false
 
 server-port: 8080
+
+dbconnection: 'postgresql://uservice_dynconf:password@localhost:5432/uservice_dynconf'
