--- a/configs/dynamic_config_fallback.json
+++ b/configs/dynamic_config_fallback.json
@@ -34,7 +34,7 @@
     }
   },
   "POSTGRES_CONNECTION_POOL_SETTINGS": {
-    "key-value-database": {
+    "postgres-db-1": {
       "max_pool_size": 15,
       "max_queue_size": 200,
       "min_pool_size": 8
@@ -45,25 +45,16 @@
     "statement_timeout_ms": 500
   },
   "POSTGRES_HANDLERS_COMMAND_CONTROL": {
-    "/v1/key-value": {
-      "DELETE": {
+    "/v1/hello": {
+      "POST": {
         "network_timeout_ms": 500,
         "statement_timeout_ms": 250
       }
     }
   },
-  "POSTGRES_QUERIES_COMMAND_CONTROL": {
-    "sample_select_value": {
-      "network_timeout_ms": 70,
-      "statement_timeout_ms": 40
-    },
-    "sample_transaction_insert_key_value": {
-      "network_timeout_ms": 200,
-      "statement_timeout_ms": 150
-    }
-  },
+  "POSTGRES_QUERIES_COMMAND_CONTROL": {},
   "POSTGRES_STATEMENT_METRICS_SETTINGS": {
-    "key-value-database": {
+    "postgres-db-1": {
       "max_statement_metrics": 5
     }
   }
