--- a/configs/config_vars_testing.yaml
+++ b/configs/config_vars_testing.yaml
@@ -6,5 +6,5 @@ is_testing: true
 
 server-port: 8080
 
-# hello_postgres_db is the service name + _ + filename of the db.sql
-dbconnection: 'postgresql://testsuite@localhost:15433/hello_postgres_db'
+# service_template_db-1 is the service name + _ + filename of the db-1.sql
+dbconnection: 'postgresql://testsuite@localhost:15433/service_template_db-1'
